--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,15 @@ pom.xml.asc
 /.nrepl-port
 .hgignore
 .hg/
+onyx-peers/target
+onyx-peers/classes
+onyx-peers/checkouts
+onyx-peers/data
+onyx-peers/pom.xml
+onyx-peers/om.xml.asc
+onyx-peers/*.jar
+onyx-peers/onyx.log*
+onyx-peers/hs_err_pid*
+.#*
+.DS_Store
+*.jfr
