--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM kojiromike/dind
+FROM docker:1.10-dind
 MAINTAINER jake@apache.org
 
 ENV JEPSEN_GIT_URL http://github.com/aphyr/jepsen
@@ -8,28 +8,89 @@ ENV LEIN_ROOT true
 # Jepsen dependencies
 #
 
-RUN apt-get -y -q update && \
-    apt-get -y -q install software-properties-common && \
-    apt-get install -y git gnuplot wget
+# Java Version and other ENV
+ENV JAVA_VERSION_MAJOR=8 \
+    JAVA_VERSION_MINOR=92 \
+    JAVA_VERSION_BUILD=14 \
+    JAVA_PACKAGE=jdk \
+    JAVA_HOME=/opt/jdk \
+    PATH=${PATH}:/opt/jdk/bin \
+    GLIBC_VERSION=2.23-r3 \
+    LANG=C.UTF-8
 
-RUN add-apt-repository -y ppa:webupd8team/java
-RUN apt-get install -y software-properties-common
-RUN apt-get update
+# do all in one step
+RUN apk upgrade --update && \
+    apk add --update curl ca-certificates bash && \
+    for pkg in glibc-${GLIBC_VERSION} glibc-bin-${GLIBC_VERSION} glibc-i18n-${GLIBC_VERSION}; do curl -sSL https://github.com/andyshinn/alpine-pkg-glibc/releases/download/${GLIBC_VERSION}/${pkg}.apk -o /tmp/${pkg}.apk; done && \
+    apk add --allow-untrusted /tmp/*.apk && \
+    rm -v /tmp/*.apk && \
+    ( /usr/glibc-compat/bin/localedef --force --inputfile POSIX --charmap UTF-8 C.UTF-8 || true ) && \
+    echo "export LANG=C.UTF-8" > /etc/profile.d/locale.sh && \
+    /usr/glibc-compat/sbin/ldconfig /lib /usr/glibc-compat/lib && \
+    mkdir /opt && curl -jksSLH "Cookie: oraclelicense=accept-securebackup-cookie" -o /tmp/java.tar.gz \
+    http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-b${JAVA_VERSION_BUILD}/${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz && \
+    gunzip /tmp/java.tar.gz && \
+    tar -C /opt -xf /tmp/java.tar && \
+    apk del curl glibc-i18n && \
+    ln -s /opt/jdk1.${JAVA_VERSION_MAJOR}.0_${JAVA_VERSION_MINOR} /opt/jdk && \
+    rm -rf /opt/jdk/*src.zip \
+           /opt/jdk/lib/missioncontrol \
+           /opt/jdk/lib/visualvm \
+           /opt/jdk/lib/*javafx* \
+           /opt/jdk/jre/plugin \
+           /opt/jdk/jre/bin/javaws \
+           /opt/jdk/jre/bin/jjs \
+           /opt/jdk/jre/bin/keytool \
+           /opt/jdk/jre/bin/orbd \
+           /opt/jdk/jre/bin/pack200 \
+           /opt/jdk/jre/bin/policytool \
+           /opt/jdk/jre/bin/rmid \
+           /opt/jdk/jre/bin/rmiregistry \
+           /opt/jdk/jre/bin/servertool \
+           /opt/jdk/jre/bin/tnameserv \
+           /opt/jdk/jre/bin/unpack200 \
+           /opt/jdk/jre/lib/javaws.jar \
+           /opt/jdk/jre/lib/deploy* \
+           /opt/jdk/jre/lib/desktop \
+           /opt/jdk/jre/lib/*javafx* \
+           /opt/jdk/jre/lib/*jfx* \
+           /opt/jdk/jre/lib/amd64/libdecora_sse.so \
+           /opt/jdk/jre/lib/amd64/libprism_*.so \
+           /opt/jdk/jre/lib/amd64/libfxplugins.so \
+           /opt/jdk/jre/lib/amd64/libglass.so \
+           /opt/jdk/jre/lib/amd64/libgstreamer-lite.so \
+           /opt/jdk/jre/lib/amd64/libjavafx*.so \
+           /opt/jdk/jre/lib/amd64/libjfx*.so \
+           /opt/jdk/jre/lib/ext/jfxrt.jar \
+           /opt/jdk/jre/lib/ext/nashorn.jar \
+           /opt/jdk/jre/lib/oblique-fonts \
+           /opt/jdk/jre/lib/plugin.jar \
+           /tmp/* /var/cache/apk/* && \
+    echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf && \ 
+    apk add --update git openssh
+
+#RUN apt-get -y -q update && \
+#    apt-get -y -q install software-properties-common && \
+#    apt-get install -y git gnuplot wget
+
+#RUN add-apt-repository -y ppa:webupd8team/java
+#RUN apt-get install -y software-properties-common
+#RUN apt-get update
 
 # Auto-accept the Oracle JDK license
-RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
+#RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
 
-RUN apt-get install -y oracle-java8-installer
+#RUN apt-get install -y oracle-java8-installer
 
-RUN apt-get clean
-RUN apt-get autoclean
-RUN apt-get autoremove
+#RUN apt-get clean
+#RUN apt-get autoclean
+#RUN apt-get autoremove
 
 RUN cd / && wget https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein && mv /lein /usr/bin 
-RUN chmod +x /usr/bin/lein
+RUN chmod +x /usr/bin/lein && lein
 
-RUN git clone $JEPSEN_GIT_URL /jepsen
-RUN cd /jepsen/jepsen && git checkout c07da100f4dfc7393f6f86f6f91d0c0b53847e9f && lein install
+#RUN git clone $JEPSEN_GIT_URL /jepsen
+#RUN cd /jepsen/jepsen && git checkout c07da100f4dfc7393f6f86f6f91d0c0b53847e9f && lein install
 
 ADD ./build-dockerized-jepsen.sh /usr/local/bin/build-dockerized-jepsen.sh
 RUN chmod +x /usr/local/bin/build-dockerized-jepsen.sh
